--- a/public/templates/projects.template
+++ b/public/templates/projects.template
@@ -1,6 +1,6 @@
 <section>
   <header>
-  <h2><a href="#/project/<%= project.id %>"><%= project.name %></a></h2>
+  <h2><a href="#/projects/<%= project.id %>"><%= project.name %></a></h2>
     <p class="project.description"><%= project.description %></p>
   </header>
 </section>
