--- a/public/templates/projects.template
+++ b/public/templates/projects.template
@@ -1,4 +1,5 @@
 <section>
+  <a href='#/projects/new'>New Project</a>
   <header>
   <h2><a href="#/projects/<%= project.id %>"><%= project.name %></a></h2>
     <p class="project.description"><%= project.description %></p>
