--- a/public/templates/project_new.template
+++ b/public/templates/project_new.template
@@ -7,7 +7,7 @@
     </p>
     <p>
     <label for="project[description]">Description:</label>
-    <input type="text" name="project[name]" value="<%= project.description %>" />
+    <input type="text" name="project[description]" value="<%= project.description %>" />
     </p>
     <p><input type="submit" value="Submit" /></p>
   </form>
